# local-planning-benchmark

./: .clang-format  .gitignore  README.md
gazebo_world/: CMakeLists.txt  package.xml
gazebo_world/clear_world/: maze.world  narrow_graph.world  office01add_empty.world  office02.world  room02_empty.world  shopping_mall.world  track.world
gazebo_world/launch/: world_launch.launch
gazebo_world/world/: maze.world  narrow_graph.world  office01add.world  office02.world  office02_dynamic.world  room02.world  shopping_mall.world  shopping_mall_dynamic.world  six_people.world  track.world
map_file/empty_world/: map.pgm  map.yaml
map_file/narrow_graph/: map.yaml
map_file/office01add/: map.yaml
map_file/office02/: map.pgm
map_file/room02/: map.pgm  map.yaml
map_file/shopping_mall/: map.pgm
map_file/shopping_mall_partially_unknown/: map.pgm
maps/empty_world/: map.yaml
maps/office01add/: map.pgm
maps/shopping_mall_partially_unknown/: map.yaml
move_base_benchmark/: CMakeLists.txt  package.xml
move_base_benchmark/doc/: CMakeLists.txt  metrics.cpp
move_base_benchmark/include/move_base_benchmark/: move_base_benchmark.h  obs_dist_calculator.h
move_base_benchmark/launch/: move_base_benchmark.launch  rviz_navigation.rviz  simple_navigation_goals.launch
move_base_benchmark/map10cm/maze/: config.txt  map.pgm  map.yaml
move_base_benchmark/map10cm/narrow_graph/: config.txt  map.pgm
move_base_benchmark/map10cm/office01add/: config.txt  map.pgm
move_base_benchmark/map10cm/office02/: config.txt  map.pgm
move_base_benchmark/map10cm/office02_dynamic/: config.txt
move_base_benchmark/map10cm/office02_partially_unknown/: config.txt  map.pgm
move_base_benchmark/map10cm/room02/: config.txt  map.pgm
move_base_benchmark/map10cm/shopping_mall/: config.txt  map.pgm
move_base_benchmark/map10cm/shopping_mall_dynamic/: config.txt
move_base_benchmark/map10cm/shopping_mall_partially_unknown/: config.txt  map.pgm
move_base_benchmark/map10cm/six_people/: config.txt
move_base_benchmark/map10cm/track/: config.txt  map.pgm
move_base_benchmark/maps/: README.md
move_base_benchmark/maps/empty_world/: map.yaml
move_base_benchmark/maps/maze/: map.pgm  map.yaml
move_base_benchmark/maps/narrow_graph/: map.pgm  map.yaml
move_base_benchmark/maps/office01add/: map.pgm  map.yaml
move_base_benchmark/maps/office02/: map.pgm  map.yaml
move_base_benchmark/maps/office02_partially_unknown/: map.pgm
move_base_benchmark/maps/room02/: map.pgm  map.yaml
move_base_benchmark/maps/shopping_mall/: map.pgm  map.yaml
move_base_benchmark/maps/shopping_mall_partially_unknown/: map.pgm  map.yaml
move_base_benchmark/maps/track/: map.pgm  map.yaml
move_base_benchmark/params/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  teb_local_planner_params.yaml
move_base_benchmark/src/: move_base_benchmark.cpp  move_base_benchmark.h  move_base_benchmark_node.cpp  obs_dist_calculator.cpp  simple_navigation_goals.cpp
navigation_simulation/: CMakeLists.txt  package.xml
navigation_simulation/launch/: robot_diff_drive_in_gazebo.launch  rviz_navigation.rviz
navigation_simulation/maps/empty_world/: map.pgm
navigation_simulation/maps/maze/: map.pgm  map.yaml
navigation_simulation/maps/office02_partially_unknown/: map.pgm
navigation_simulation/maps/track/: map.yaml
navigation_simulation/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
p3dx/: LICENSE  README.md
p3dx/p3dx_control/: CMakeLists.txt  package.xml
p3dx/p3dx_control/config/: control.yaml
p3dx/p3dx_control/launch/: control.launch
p3dx/p3dx_description/: CMakeLists.txt  README.md  package.xml
p3dx/p3dx_description/launch/: description.launch
p3dx/p3dx_description/meshes/laser/: hokuyo_utm_30lx.dae
p3dx/p3dx_description/urdf/: materials.xacro
p3dx/p3dx_description/urdf/laser/: hokuyo.xacro
p3dx/p3dx_description/urdf/p3dx/: battery_block.xacro  inertia_tensors.xacro  pioneer3dx.xacro  pioneer3dx_body.xacro  pioneer3dx_chassis.xacro  pioneer3dx_plugins.xacro  pioneer3dx_sonar.xacro  pioneer3dx_swivel.xacro  pioneer3dx_wheel.xacro
p3dx/p3dx_description/urdf/sensors/: hokuyo_utm30lx.urdf.xacro  kinectv2.urdf.xacro
p3dx/p3dx_gazebo/: CMakeLists.txt  package.xml
p3dx/p3dx_gazebo/launch/: p3dx_gazebo.launch  pioneer3dx.rviz  spawn_p3dx.launch
p3dx_gazebo/: CMakeLists.txt  package.xml
p3dx_gazebo/launch/: demo.launch  pioneer3dx.gazebo.launch  pioneer3dx.launch
p3dx_gazebo/xacro/laser/: hokuyo.xacro
p3dx_gazebo/xacro/p3dx/: pioneer3dx.xacro  pioneer3dx_body.xacro  pioneer3dx_chassis.xacro  pioneer3dx_plugins.xacro  pioneer3dx_sonar.xacro  pioneer3dx_swivel.xacro  pioneer3dx_wheel.xacro
