<?xml version="1.0"?>
<package>
  <name>p3dx_description</name>
  <version>0.0.1</version>
  <description>p3dx model for Gazebo and ROS environment</description>

  <author email="jianle001@e.ntu.edu.sg">brucechanjianle</author>
  <maintainer email="jianle001@e.ntu.edu.sg">brucechanjianle</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>